test/duplicate-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-cloud-ingress
  namespace: kube-system
  labels:
    name: hello-cloud-ingress
spec:
  rules:
  - host: hello-cloud.kubernetes.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-cloud-service
          servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-cloud-ingress
  namespace: default
  labels:
    name: hello-cloud-ingress
spec:
  rules:
  - host: hello-cloud.kubernetes.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-cloud-service
          servicePort: 80
